crates/nargo_cli/tests/compile_tests_data/fail/binop-typeck.nr
fn main() {
    let x = true;
    let y = 1;
    let z = x + y;
}
